[package]
name = "root_seeker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_rapier2d = { version = "0.19.0", features = ["simd-stable"] }

# optimize dev packages as we don't need them in debug version
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1