[package]
name = "root_seeker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_rapier2d = { version = "0.19.0", features = ["simd-stable"] }
bevy_asset_loader = { version = "0.14.1", features = [
    "2d",
    "3d",
    "standard_dynamic_assets",
] }
rand = "0.8.5"
bevy_kira_audio = { version = "0.13.0", features = ["mp3", "wav"] }
bevy-parallax = "0.3.0"


# optimize dev packages as we don't need them in debug version
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1